--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ name = "dd-coresets"
 version = "0.1.0"
 description = "Density–Diversity Coresets (DDC) for dataset summarization and distributional approximation"
 readme = "README.md"
-license = { text = "MIT" }
+license = "MIT"
+license-files = ["LICENSE"]
 authors = [
   { name = "Carlos R. B. Azevedo", email = "renatoaz@gmail.com" }
 ]
