feat: add minimal DDC Advantage suite, consolidated docs, and clean examples (KISS)
Core experiments (reduced suite):
- cluster_structures.py, complex_marginals.py, non_convex_geometries.py, real_datasets.py
- Minimal CLI runner with presets (small/medium) and seed support
- Shared utilities (utils.py) for metrics and visualization

Examples:
- binary_classification_ddc.ipynb (pedagogical notebook)
- adaptive_distance_demo.py (quick 2D demo, no extra deps)

Documentation (consolidated from 17 to 3):
- DDC_ADVANTAGE_CASES.md (main guide)
- DDC_ADVANTAGE_EXECUTIVE_SUMMARY.md (1-2 pages)
- ADAPTIVE_DISTANCES_EXPLAINED.md (concepts + correct formulas)

Advanced materials moved to examples/advanced/:
- Analysis scripts (not published to PyPI, Git only)

Cleanup:
- Updated .gitignore to exclude generated results/images
- Removed all CSV/PNG outputs (reproducible via scripts + seeds)
- Added results/.keep to preserve directory structure

KISS principle: minimal, useful, reproducible, maintainable

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,14 @@ Thumbs.db
 .coverage
 htmlcov/
 
+# Experiments output
+experiments/**/results/**
+!experiments/**/results/.keep
+
+# Figures (keep only hero SVGs)
+docs/images/**
+!docs/images/hero_*.svg
+
+# Notebooks checkpoints
+**/.ipynb_checkpoints/
+
