--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -16,6 +16,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+        ref: main  # Checkout main branch, not the tag
 
     - name: Extract version from tag
       id: get_version
@@ -36,5 +37,5 @@ jobs:
         git config --local user.name "GitHub Action"
         git add README.md
         git diff --staged --quiet || git commit -m "Update citation version to ${{ steps.get_version.outputs.version }}"
-        git push
+        git push origin main
 
