fix: Use working-directory in workflow and add setup guide
- Use working-directory instead of cd for better reliability
- Add GITHUB_PAGES_SETUP.md troubleshooting guide

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -31,9 +31,9 @@ jobs:
           pip install jupyter-book ghp-import
 
       - name: Build book
+        working-directory: docs/book
         run: |
-          cd docs/book
-          jupyter-book build . --all --verbose
+          jupyter-book build . --all
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
