--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build book
         working-directory: docs/book
         run: |
-          jb build . --all
+          jupyter-book build . --all
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
