--- a/docs/book/_config.yml
+++ b/docs/book/_config.yml
@@ -4,16 +4,6 @@
 title: dd-coresets Documentation
 author: Carlos R. B. Azevedo
 
-# Book settings
-html:
-  use_edit_button: false
-  use_repository_button: true
-  repository_url: https://github.com/crbazevedo/dd-coresets
-  use_issues_button: true
-  use_download_button: true
-  home_page_in_navbar: true
-  baseurl: ""
-
 # Execute notebooks
 execute:
   execute_notebooks: "off"  # We'll execute manually before building
@@ -26,9 +16,15 @@ parse:
     - ampersand
     - html_image
 
-# Bibliography
-bibtex_bibfiles:
-  - references.bib
+# HTML settings
+html:
+  use_edit_page_button: false
+  use_repository_button: true
+  repository_url: https://github.com/crbazevedo/dd-coresets
+  use_issues_button: true
+  use_download_button: true
+  home_page_in_navbar: true
+  baseurl: ""
 
 # LaTeX
 latex:
