fix: Try cd instead of working-directory for Jupyter Book build

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -31,8 +31,8 @@ jobs:
           pip install jupyter-book ghp-import
 
       - name: Build book
-        working-directory: docs/book
         run: |
+          cd docs/book
           jupyter-book build . --all
 
       - name: Deploy to GitHub Pages
