fix: Try specifying full path in jupyter-book build command

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build book
         run: |
           cd docs/book
-          jupyter-book build . --all
+          jupyter-book build docs/book --all
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
