--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build book
         run: |
-          jupyter-book build docs/book --all
+          python -m jupyter_book build docs/book --all
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
