--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -32,7 +32,8 @@ jobs:
 
       - name: Build book
         run: |
-          python -m jupyter_book build docs/book --all
+          cd docs/book
+          python -m jupyter_book build . --all
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
