--- a/docs/book/_config.yml
+++ b/docs/book/_config.yml
@@ -14,11 +14,15 @@ parse:
     - ampersand
     - html_image
 
+# Repository settings
+repository:
+  url: https://github.com/crbazevedo/dd-coresets
+  branch: main
+
 # HTML settings
 html:
   use_edit_page_button: false
   use_repository_button: true
-  repository_url: https://github.com/crbazevedo/dd-coresets
   use_issues_button: true
   use_download_button: true
   home_page_in_navbar: true
