docs: Add figure saving and markdown references to tutorial notebooks
- Modified notebooks to save figures to images/tutorials/
- Added markdown cells with figure references and captions
- Updated copyright year to 2025 in _config.yml
- Created documentation improvement plan and implementation guides

--- a/docs/book/_config.yml
+++ b/docs/book/_config.yml
@@ -34,6 +34,7 @@ latex:
 # Sphinx settings
 sphinx:
   config:
+    copyright: "2025, Carlos R. B. Azevedo"
     html_theme_options:
       navigation_depth: 2
       show_prev_next: true
